--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">-->
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
     <title>Search for movies</title>
 </head>
@@ -13,7 +13,17 @@
         <h6>This product uses the TMDb API but is not endorsed or certified by TMDb.</h6>
     </header>
     <main>
-        <div class="search_container"></div>
+        <div class="search_container">
+            <button class="search">Search</button>
+            <label for="title">Title</label>
+            <input type="text" id="title" placeholder="Gladiator">
+<!--
+            <label for=""></label>
+            <input type="text">
+            <label for=""></label>
+            <input type="text">
+-->
+        </div>
         <div class="results_container"></div>
     </main>
     <footer></footer>
