--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="search_container">
             <div class="search panel">
                 <label for="title">Title</label>
-                <input type="text" id="title" placeholder="Gladiator" value="jack reacher">
+                <input type="text" id="title" placeholder="Gladiator">
             </div>
             <div class="search panel">
                 <label for="advanced_search">Advanced Search</label>
@@ -31,12 +31,12 @@
                 <input type="date" id="date_lte">
             </div>
             <div class="search panel">
-                <label for="popular">Popularity</label>
-                <input type="text" id="popular" placeholder="8.0">
+                <label for="actors">Actors</label>
+                <input type="text" id="actors" placeholder="Arnold Schwarzenegger, Angelina Jolie">
             </div>
             <div class="search panel">
                 <label for="genres">Genres</label>
-                <input type="text" id="genres" placeholder="Action Drama">
+                <input type="text" id="genres" placeholder="Action, Horror">
             </div>
             <button class="search_button">Search</button>
         </div>
@@ -46,7 +46,7 @@
         </div>
         <div class="pagination panel" id="pagination">
             <button><i class="fa fa-chevron-left" aria-hidden="true"></i></button>
-            <button class="page_selected">1</button>
+            <!--<button class="page_selected">1</button>-->
             <button><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
         </div>
     </main>
