--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="search_container">
             <div class="search panel">
                 <label for="title">Title</label>
-                <input type="text" id="title" placeholder="Gladiator">
+                <input type="text" id="title" placeholder="Gladiator" value="Gladiator">
             </div>
             <div class="search panel">
                 <label for="advanced_search">Advanced Search</label>
@@ -36,22 +36,34 @@
             </div>
             <div class="search panel">
                 <label for="genres">Genres</label>
-                <input type="text" id="genres" placeholder="Action, Horror">
+                <input type="text" id="genres" placeholder="Action, Horror" value="Action,Horror">
             </div>
             <button class="search_button">Search</button>
         </div>
         <div class="results_container" id="results_container">
-            <!--<h2>Total Results: 2</h2>-->
-            <h2>Popular New Movies</h2>
+            <h2></h2>
+        </div>
+        <div class="details_container">
+            <div class="details">
+                <i class="fa fa-times" aria-hidden="true"></i>
+                <img src="#">
+                <div id="details_col2">
+                    <h2 id="detais_title"></h2>
+                    <h5 id="details_tagline"></h5>
+                    <p id="details_release_date"></p>
+                    <a><i class="fa fa-play" aria-hidden="true"></i> Play Trailer</a>
+                    <p id="details_overview"></p>
+                    <p id="details_feautered_crew"></p>
+                </div>
+            </div>
         </div>
         <div class="pagination panel" id="pagination">
             <button><i class="fa fa-chevron-left" aria-hidden="true"></i></button>
-            <!--<button class="page_selected">1</button>-->
             <button><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
         </div>
     </main>
     <footer>
-        <p>Coded by Stefan Norbert Iuhas</p>
+        <p>Coded by Stefan</p>
     </footer>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
