Search by other options

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="search_container">
             <div class="search panel">
                 <label for="title">Title</label>
-                <input type="text" id="title" placeholder="Gladiator" value="Gladiator">
+                <input type="text" id="title" placeholder="Gladiator">
             </div>
             <div class="search panel">
                 <label for="advanced_search">Advanced Search</label>
@@ -36,7 +36,7 @@
             </div>
             <div class="search panel">
                 <label for="genres">Genres</label>
-                <input type="text" id="genres" placeholder="Action, Horror" value="Action,Horror">
+                <input type="text" id="genres" placeholder="Action, Horror">
             </div>
             <button class="search_button">Search</button>
         </div>
@@ -51,7 +51,7 @@
                     <h2 id="detais_title"></h2>
                     <h5 id="details_tagline"></h5>
                     <p id="details_release_date"></p>
-                    <a><i class="fa fa-play" aria-hidden="true"></i> Play Trailer</a>
+                    <a href="#" id="details_trailer" target="_blank"><i class="fa fa-play" aria-hidden="true"></i> Play Trailer</a>
                     <p id="details_overview"></p>
                     <p id="details_feautered_crew"></p>
                 </div>
