--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                 <label for="genres">Genres</label>
                 <input type="text" id="genres" placeholder="Action, Horror">
             </div>
-            <button class="search_button">Search</button>
+            <button class="search_button" id="clear">Clear all</button>
+            <button class="search_button" id="search">Search</button>
         </div>
         <div class="results_container" id="results_container">
             <h2></h2>
