--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <label for="title">Title</label>
                 <input type="text" id="title" placeholder="Gladiator">
             </div>
-            <div class="search panel">
+            <div class="search panel" id="advanced_search" data-toggle="false">
                 <label for="advanced_search">Advanced Search</label>
-                <input type="checkbox" id="advanced_search">
+                <div><i class="fa fa-toggle-off" aria-hidden="true"></i></div>
             </div>
             <div class="search panel">
                 <label for="date_gte">Date from</label>
@@ -38,7 +38,7 @@
                 <label for="genres">Genres</label>
                 <input type="text" id="genres" placeholder="Action, Horror">
             </div>
-            <button class="search_button" id="clear">Clear all</button>
+            <button class="search_button" id="clear">Clear Title</button>
             <button class="search_button" id="search">Search</button>
         </div>
         <div class="results_container" id="results_container">
@@ -59,6 +59,7 @@
             </div>
         </div>
         <div class="pagination panel" id="pagination">
+            <button><i class="fa fa-angle-double-left" aria-hidden="true"></i></button>
             <button><i class="fa fa-chevron-left" aria-hidden="true"></i></button>
             <button><i class="fa fa-chevron-right" aria-hidden="true"></i></button>
         </div>
