--- a/index.html
+++ b/index.html
@@ -38,7 +38,16 @@
                 <label for="genres">Genres</label>
                 <input type="text" id="genres" placeholder="Action, Horror">
             </div>
+            <div class="search panel">
+                <label for="votes">Votes</label>
+                <input type="number" id="votes" placeholder="2000">
+            </div>
+            <div class="search panel">
+                <label for="rating">Rating</label>
+                <input type="number" id="rating" placeholder="6.5">
+            </div>
             <button class="search_button" id="clear">Clear Title</button>
+            <!--<div id="loading">Loading....<img src="images/spinner.gif" width="50"/></div>-->
             <button class="search_button" id="search">Search</button>
         </div>
         <div class="results_container" id="results_container">
