--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="search_container">
             <div class="search panel">
                 <label for="title">Title</label>
-                <input type="text" id="title" placeholder="Gladiator" value="gladiator">
+                <input type="text" id="title" placeholder="Gladiator">
             </div>
             <div class="search panel" id="advanced_search" data-toggle="false">
                 <label for="advanced_search">Advanced Search</label>
@@ -44,7 +44,7 @@
             </div>
             <div class="search panel">
                 <label for="rating">Rating</label>
-                <input type="number" id="rating" placeholder="6.5" value="7">
+                <input type="number" id="rating" placeholder="6.5">
             </div>
             <button class="search_button" id="clear">Clear Title</button>
             <!--<div id="loading">Loading....<img src="images/spinner.gif" width="50"/></div>-->
